[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["axi <last59s@hotmail.com>"]
description = "A simple key-value database"

[[bin]]
name = "kvs-cli"
path = "src/bin/client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/server.rs"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.2.4", features = ["derive"] }
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
